bug 317476: The error thrown by JS_ReportError is not catchable. r=brendan